--- a/index.html
+++ b/index.html
@@ -17,18 +17,40 @@
     <body background="background.jpg">
         <center>
             <div class=" btn btn-warning heading">
-              <h3>AI Mario Game</h3>
+              <h3>AI PING Pong</h3>
               <button class="btn btn-warning" data-toggle = "modal" data-target="#myModal">Instructions</button>
             </div>
-            <img src="mario.jpg" class="big_image">
             <br> <br>
             <button class="btn btn-success" onclick="startGame()" id="start">Play Game</button>
+            <button class="btn btn-danger" id="restart_btn" onclick="restart()">Restart</button>
             <br> <br>
             <h3 id="status" class="btn btn-default"></h3>
             <br> <br>
             <div id="canvas"></div>
-            <div id="game_console"></div>
+            
+      <div id="myModal" class="modal fade">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button class="close" data-dismiss="modal">&times;</button>
+              <h4>Instructions</h4>
+            </div>
+            <div class="modal-body">
+              <ol class="instructions">
+                <li>First Keep your laptop screen straight</li>
+                <li>Move yourself approximately 3 to 4 feet away from the laptop</li>
+                <li>Move your right wrist in an ascending and descending manner, a red dot should appear on your right wrist</li>
+                <li>Press the play button, and again move yourself 3 to 4 feet away from the laptop</li>
+                <li>The red paddle is your paddle, that will move as per the movement of your right wrist</li>
+              </ol>
+            </div>
+          </div>
+        </div>
+      </div>
           </center>
+          <div class="footer">
+            Developed By: Nihitha Avula
+          </div>
 
         <script src="main.js"></script>
     </body>
